--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ reqwest = { version = "*", features = ["blocking", "json", "form"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-anyhow = "1.0.101"
+anyhow = "1.0.102"
 once_cell = "1.21.3"
+typesense = "0.3.0"
+chrono = "0.4.43"
+base64 = "0.22.1"
